syntax = "proto3";
//import "google/protobuf/empty.proto";
option csharp_namespace = "MoviaMobilEndPiontGrpc.Protos";

package BusGrpcProto;

service BusGrpcService {
//Crud start
rpc CreateBus(Bus) returns (DatabaseChagedBus);
rpc GetBusInfo(BusRequest) returns (Bus);
rpc UpdateBusInfo(Bus) returns (DatabaseChagedBus);
rpc DeleteBus(Bus) returns (DatabaseChagedBus);
//Crud End
rpc GetAllBuss(BusRequest) returns(BusList);
rpc UpdaeBusPoscition(Bus) returns (DatabaseChagedBus);
rpc UpdatePassagseCount(Bus) returns (DatabaseChagedBus); // Increments the bus passagse count or decroments
}


message Bus {
    int32 id = 1;
    string name = 2;
    string make = 3;
    string driver = 5;
    int32 routeid = 4;
    int32 totaltbuscap = 6;
    int32 currentpaxcont = 7;
    string lat = 8;
    string lon = 9;
}
message BusList{
    repeated Bus buslist = 1;
}
message DatabaseChagedBus{
    bool haschanbged = 1;
}

message BusRequest{
string id = 1;
}